// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds actor search views search gives relevant results 1`] = `
Array [
  Object {
    "did": "user(0)",
    "handle": "cara-wiegand69.test",
    "labels": Array [],
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(2)/cids(0)@jpeg",
    "did": "user(1)",
    "displayName": "Carol Littel",
    "handle": "eudora-dietrich4.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(0)@jpeg",
    "did": "user(3)",
    "displayName": "Sadie Carter",
    "handle": "shane-torphy52.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(6)/cids(0)@jpeg",
    "did": "user(5)",
    "displayName": "Carlton Abernathy IV",
    "handle": "aliya-hodkiewicz.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {},
  },
  Object {
    "did": "user(7)",
    "handle": "carlos6.test",
    "labels": Array [],
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(9)/cids(0)@jpeg",
    "did": "user(8)",
    "displayName": "Latoya Windler",
    "handle": "carolina-mcdermott77.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(11)/cids(0)@jpeg",
    "did": "user(10)",
    "displayName": "Rachel Kshlerin",
    "handle": "cayla-marquardt39.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {},
  },
]
`;

exports[`pds actor search views typeahead gives relevant results 1`] = `
Array [
  Object {
    "did": "user(0)",
    "handle": "cara-wiegand69.test",
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(2)/cids(0)@jpeg",
    "did": "user(1)",
    "displayName": "Carol Littel",
    "handle": "eudora-dietrich4.test",
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(0)@jpeg",
    "did": "user(3)",
    "displayName": "Sadie Carter",
    "handle": "shane-torphy52.test",
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(6)/cids(0)@jpeg",
    "did": "user(5)",
    "displayName": "Carlton Abernathy IV",
    "handle": "aliya-hodkiewicz.test",
    "viewer": Object {},
  },
  Object {
    "did": "user(7)",
    "handle": "carlos6.test",
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(9)/cids(0)@jpeg",
    "did": "user(8)",
    "displayName": "Latoya Windler",
    "handle": "carolina-mcdermott77.test",
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(11)/cids(0)@jpeg",
    "did": "user(10)",
    "displayName": "Rachel Kshlerin",
    "handle": "cayla-marquardt39.test",
    "viewer": Object {},
  },
]
`;
